# CargoShip-Traffic-Simulation

./: .gitignore  Born to run.txt  CMakeLists.txt  README.md  as above + trashing.txt  cargos, big stuff.txt  config1.txt  dense, small ships.txt  guidelines.md  main.c  makefile  master.c  master.h  nave.c  testing config.txt  unlucky cargos.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bugs.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cmake.yml  make.yml
headers/: common_ipcs.h  linked_list.h  master.h  utils.h
source/: common_ipcs.c  linked_list.c  master.c  meteo.c  nave.c  porto.c  utils.c
utils/: common_ipcs.h  logger.h  utils.h
utils/header/: logger.h
utils/source/: common_ipcs.c  logger.c  utils.c
